# apt-rxiv-maker

./: LICENSE  README.md  pubkey.gpg  pyproject.toml  rxiv-install-deps.spec  rxiv.spec  rxiv_entry.py  rxiv_install_deps_entry.py
.github/workflows/: auto-update-package.yml  publish-apt.yml  test-apt-containers.yml
EXAMPLE_MANUSCRIPT/: README.md
MANUSCRIPT/: README.md
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/: changelog  control  debhelper-build-stamp  py3dist-overrides  rules  rxiv-maker.install  rxiv-maker.postinst  rxiv-maker.prerm
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/: Contents-amd64.bz2
dists/stable/main/binary-amd64/: Packages  Packages.bz2  Release
dists/stable/main/binary-arm64/: Packages  Packages.bz2  Release
docs/: apt-container-testing.md  apt-installation.md  apt-repository-guide.md  apt-repository-setup.md  container-apt-testing.md  ubuntu22-compatibility-changes.md
scripts/: build-deb.sh  setup-apt-repo.sh  test-apt-container.sh  test-changes-in-container.sh  test-ubuntu22-compatibility.sh  validate-apt-repo.sh  validate-package-syntax.sh
src/rxiv_maker/: __init__.py  __version__.py  cli.py  version_check.py
src/tex/: README.md  template.tex
src/tex/style/: rxiv-maker.sty  rxiv-modern.sty
tests/container/: Containerfile.ubuntu22-compatibility-test
